# nlp-ncsr-task1

./: .gitignore  README.md  assignment_1.ipynb  pyproject.toml  requirements.txt
scripts/: part_a.py  part_b.py
src/nlp_ngram/: __init__.py  cli.py  data.py  ngram.py
tests/: conftest.py  test_data.py  test_ngram.py  test_part_a.py  test_part_b.py
